--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.fieb.browseimoveis01" >
+    package="com.fieb.browseimoveis01">
+
+    <uses-permission android:name="android.permission.INTERNET" />
+
 
     <application
         android:allowBackup="true"
@@ -8,19 +11,22 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.BrowseImoveis01" >
+        android:theme="@style/Theme.BrowseImoveis01">
         <activity
-            android:name=".MainActivity"
+            android:name=".CadastroActivity"
             android:exported="true" />
         <activity
             android:name=".BrowseLogin"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".MainSegundaTelaActivity"
+            android:exported="true"></activity>
     </application>
 
 </manifest>
