--- a/settings.gradle
+++ b/settings.gradle
@@ -1,17 +1,17 @@
 dependencyResolutionManagement {
     repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
     repositories {
-        google()
-        mavenCentral()
+//        google()
+//        mavenCentral()
 //        jcenter() // Warning: this repository is going to shut down soon
-//        maven{
-//            url 'http://repoandroid:8081/repository/maven-public/'
-//            allowInsecureProtocol=true
-//            credentials{
-//                username 'android'
-//                password '123456'
-//            }
-//        }
+        maven{
+            url 'http://repoandroid:8081/repository/maven-public/'
+            allowInsecureProtocol=true
+            credentials{
+                username 'android'
+                password '123456'
+            }
+        }
     }
 }
 rootProject.name = "BrowseImoveis01"
